lang/macro/tests/ui/fail/08-constructor-self-ref.rs
use ink_lang as ink;

#[ink::contract(version = "0.1.0")]
mod noop {
    #[ink(storage)]
    struct Noop {}

    impl Noop {
        #[ink(constructor)]
        fn invalid_self_ref(&self) {}

        #[ink(message)]
        fn noop(&self) {}
    }
}

fn main() {}
